Bug 1262050 - Remove unneeded assertion and update test annotations accordingly. r=jimm

--HG--
extra : rebase_source : d2471bd4cce2a65b1247d23225c7ccab4bab5f01